fix style add dates on small devices

--- a/groupie/app/static/less/style.less
+++ b/groupie/app/static/less/style.less
@@ -55,13 +55,21 @@ hr.divisor {
 }
 
 #add-datepair { 
-	position: absolute; 
-	bottom: 53px;
+	margin-bottom: 20px;
 }
+
+
 .italy {
 	background:url(../img/group-travel02.jpg) left bottom;
 	width: 100%;
 
+	&.jumbotron {
+		padding-top: 28px;
+		
+		.title {
+			padding: 40px 0 40px 0;
+		}
+	}
 	label {
 		font-size: 18px;
 		margin: 0;
@@ -75,4 +83,6 @@ hr.divisor {
 	.checkbox input{
 		margin-top: 15px;
 	}
+
+	.btn-block { margin-top: 20px;}
 }	
